Importer API and Frontend
The new importer provides an API that lets users:
- Run validation on their study
- Run a _test_ import on their study
- View who has access to their study
- See the status of all studies they have access to
- See import / validation logs for studies

--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -107,9 +107,9 @@
             <configuration>
               <artifactItems>
                 <artifactItem>
-                  <groupId>${frontend.groupId}</groupId>
+                  <groupId>com.github.dfci</groupId>
                   <artifactId>cbioportal-frontend</artifactId>
-                  <version>${frontend.version}</version>
+                  <version>164555aa5e85869d33051dfa55506454d61c40f6</version>
                   <type>jar</type>
                   <outputDirectory>.</outputDirectory>
                   <excludes>*index*</excludes>
