--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -105,9 +105,9 @@
             <configuration>
               <artifactItems>
                 <artifactItem>
-                  <groupId>${frontend.groupId}</groupId>
+                  <groupId>com.github.dfci</groupId>
                   <artifactId>cbioportal-frontend</artifactId>
-                  <version>${frontend.version}</version>
+                  <version>b9fdc83bceb5dff8826aa3d968c43506f02f401e</version>
                   <type>jar</type>
                   <outputDirectory>.</outputDirectory>
                   <excludes>*index*</excludes>
