--- a/scripts/pom.xml
+++ b/scripts/pom.xml
@@ -76,6 +76,7 @@
               <artifactSet>
                 <excludes>
                   <exclude>org.bouncycastle:bcprov-jdk15</exclude>
+                  <exclude>org.bouncycastle:*</exclude>
                 </excludes>
               </artifactSet>
               <transformers>
